--- a/game_page.html
+++ b/game_page.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\Public\css\game_styles.css">
-    <script src="..\Public\js\game_script.js" defer></script>
+    <link rel="stylesheet" href="game_styles.css">
+    <script src="game_script.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
